--- a/Frontend/my-app/src/components/Destaques/style.css
+++ b/Frontend/my-app/src/components/Destaques/style.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    background-color: rgba(221, 221, 221, 1);
+    background-color:  #b7e4c7;
     margin: -5px 0;
     font-size: 140%;
 }
@@ -25,3 +25,7 @@
     margin: 80px 0px 40px 0px;
     border-radius: 5px;
 }
+.css-9425fu-MuiOutlinedInput-notchedOutline{
+    border-color: #212121  !important;
+}
+
