--- a/Frontend/my-app/src/components/Card/style.css
+++ b/Frontend/my-app/src/components/Card/style.css
@@ -3,16 +3,12 @@
   border-radius: 4px;
   width: 200px;
   height: 300px;
-  background-color:rgba(196, 196, 196, 1);
+  background-color:#95d5b2;
   margin: 10px;
   padding: 10px;
   margin-top: 90px;
 }
 
-.Image{
-  width: 50px;
-  height: 50px;
-  margin: 120px 75px;
-}
+
 
 
