Edit Colors Header/Footer

--- a/Frontend/my-app/src/components/Header/style.css
+++ b/Frontend/my-app/src/components/Header/style.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-color: #74c69d;
+    background-color: #52b788;
     height: 80px;
     padding: 5px 60px;   
 }
