--- a/Frontend/my-app/src/components/Footer/style.css
+++ b/Frontend/my-app/src/components/Footer/style.css
@@ -5,7 +5,7 @@
     text-align: center;
     align-items: center;
     justify-content: space-between;
-    background-color: #74c69d;
+    background-color: #52b788;
 }
 
 .icons-footer {
